# np_notebooks

./: .gitignore  install.bat  launch.bat  pyproject.toml  requirements.txt  reset_update_launch.bat
.github/workflows/: pin_dependencies.yml
data_management/: upload_s3.ipynb  utils.py
dynamic_routing/: dynamic_routing.ipynb
openscope_P3/: P3_pilot.ipynb
openscope_P3/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
openscope_V2/: V2_pilot.ipynb
openscope_V2/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
pretest/: default_pretest.ipynb
